...
        return label
    }()
    
    let recipeTitle: UITextField = {
        var title = UITextField(frame: CGRect(x: 0, y: 0, width: 280, height: 40))
        title.center = CGPoint(x: 210, y: 220)
        title.placeholder = "Title"
        title.font = UIFont(name: "CaveatBrush-Regular", size: 25)
        title.borderStyle = UITextField.BorderStyle.roundedRect
        title.layer.borderColor = UIColor(red: 70/255, green: 74/255, blue: 74/255, alpha: 1.0).cgColor
        title.layer.borderWidth = 1.5
        title.layer.cornerRadius = 8
        title.layer.shadowColor = UIColor.darkGray.cgColor
...
        return title
    }()
    
    let recipeType: UITextField = {
        var type = UITextField(frame: CGRect(x: 0, y: 0, width: 280, height: 40))
        type.center = CGPoint(x: 210, y: 280)
        type.placeholder = "Type"
        type.font = UIFont(name: "CaveatBrush-Regular", size: 25)
        type.borderStyle = UITextField.BorderStyle.roundedRect
        type.layer.borderColor = UIColor(red: 70/255, green: 74/255, blue: 74/255, alpha: 1.0).cgColor
        type.layer.borderWidth = 1.5
        type.layer.cornerRadius = 8
        type.layer.shadowColor = UIColor.darkGray.cgColor
...
        }
        return categories
    }()
    
    func setupCategorySelector() {
        categorySelector.center = CGPoint(x: 210, y: 340)
        categorySelector.setTitle("Category", for: .normal)
        categorySelector.titleLabel?.font = UIFont(name: "CaveatBrush-Regular", size: 25)
        categorySelector.layer.borderColor = UIColor(red: 70/255, green: 74/255, blue: 74/255, alpha: 1.0).cgColor
        categorySelector.layer.cornerRadius = 8
        categorySelector.backgroundColor = UIColor(red: 253/255, green: 221/255, blue: 92/255, alpha: 1.0)
        categorySelector.setTitleColor(.darkGray, for: .normal)
        categorySelector.layer.borderWidth = 1.5
...
    
    func populateCategoryDropdown() {
        for recipe in recipes {
            foodCategories.append(recipe.category)
        }
        foodCategories = foodCategories.uniqued()
        foodCategories.append("Add New")
        categoryDropdown.dataSource = foodCategories
    }
    
    @objc func didTapCategorySelector() {
        userCategory = nil
        categoryDropdown.show()
        categoryDropdown.selectionAction = { index, category in
            
            if category == "Add New" {
                let alertController = UIAlertController(title: "New Category", message: nil, preferredStyle: .alert)
                alertController.addTextField { (textField) in
                    textField.placeholder = "Enter new category"
                    let cancelAction = UIAlertAction(title: "Cancel", style: .cancel, handler: nil)
                    let saveAction = UIAlertAction(title: "Save", style: .default) { [self] _ in
                        let inputCategory = alertController.textFields![0].text
                        
                        guard let newCategory = inputCategory, !newCategory.isEmpty else {
                            throwAlert(field: .category)
                            return
                        }
...
    let recipeDescription: KMPlaceholderTextView = {
        var description = KMPlaceholderTextView(frame: CGRect(x: 0, y: 0, width: 280, height: 220))
        description.center = CGPoint(x: 210, y: 500)
        description.font = UIFont(name: "CaveatBrush-Regular", size: 25)
        description.layer.cornerRadius = 8
        description.isEditable = true
        description.placeholder = "Description"
        description.dataDetectorTypes = UIDataDetectorTypes.link
        description.layer.borderColor = UIColor(red: 70/255, green: 74/255, blue: 74/255, alpha: 1.0).cgColor
        description.layer.borderWidth = 1.5
        description.layer.shadowColor = UIColor.darkGray.cgColor
        description.layer.shadowOpacity = 0.4
        description.layer.shadowOffset = CGSize(width: 4.0, height: 4.0)
        return description
    }()
    
    let addRecipeButton: UIButton = {
        var button = UIButton()
        button.tintColor = .black
        button.setTitle("Add", for: .normal)
        button.titleLabel!.font = UIFont(name: "CaveatBrush-Regular", size: 25)
        button.backgroundColor = UIColor(red: 253/255, green: 221/255, blue: 92/255, alpha: 1.0)
        button.setTitleColor(UIColor(red: 70/255, green: 74/255, blue: 74/255, alpha: 1.0), for: .normal)
        button.titleLabel?.textAlignment = .center
        button.layer.borderWidth = 1.5
        button.layer.borderColor = UIColor(red: 70/255, green: 74/255, blue: 74/255, alpha: 1.0).cgColor
...
    func confirmationMessageShown() {
        recipeDelegate?.addNewRecipe(recipe!)
        let alert = UIAlertController(title: "Thank You!", message: "Your new recipe has now been added to the cookbook", preferredStyle: UIAlertController.Style.alert)
        alert.addAction(UIAlertAction(title: "OK", style: UIAlertAction.Style.default, handler: {_ in
                self.dismiss(animated: true, completion: nil)
        }))
        alert.view.accessibilityIdentifier = "recipe added confirmation"
        self.present(alert, animated: true, completion: nil)
    }
    
    func throwAlert(field: fieldType) {
        let alert = UIAlertController(title: "Alert", message: "Empty \(field), please try again", preferredStyle: UIAlertController.Style.alert)
        alert.addAction(UIAlertAction(title: "OK", style: UIAlertAction.Style.destructive, handler: nil))
...
        self.present(alert, animated: true, completion: nil)
    }
    
    func throwMissingImageAlert() {
        let alert = UIAlertController(title: "Warning", message: "Missing Image, are you sure you want to proceed?", preferredStyle: UIAlertController.Style.alert)
        alert.addAction(UIAlertAction(title: "No", style: UIAlertAction.Style.default, handler: nil))
        alert.addAction(UIAlertAction(title: "Yes", style: UIAlertAction.Style.default, handler: { (_) in self.confirmationMessageShown() } ))
        alert.view.accessibilityIdentifier = "Missing Photo alert"
        self.present(alert, animated: true, completion: nil)
    }
    
    func titleAlreadyExistsAlert() {
        let alert = UIAlertController(title: "Alert", message: "Title already exists, please try again", preferredStyle: UIAlertController.Style.alert)
        alert.addAction(UIAlertAction(title: "OK", style: UIAlertAction.Style.destructive, handler: nil))
        alert.view.accessibilityIdentifier = "Existing title alert"
        self.present(alert, animated: true, completion: nil)
    }

    
}

...
